--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@graphql-codegen/typescript": "2.1.1",
     "@graphql-codegen/typescript-operations": "2.1.1",
     "@graphql-codegen/typescript-react-apollo": "3.1.1",
-    "@paljs/cli": "3.8.2",
+    "@paljs/cli": "^3.8.2",
     "@types/bcryptjs": "2.4.2",
     "@types/cookie": "0.4.1",
     "@types/graphql": "14.5.0",
