Adding namespace for k8s deployment

--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -6,5 +6,7 @@ images:
 - name: "spantree/hello-world-kustomize-k8s"
   newName: "spantree/hello-world-kustomize-k8s"
   newTag: "2.0"
+namespace: hello-world
+namePrefix: dev-
 patchesStrategicMerge:
 - map.yaml
