--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "ts-node": "10.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
     "@graphql-codegen/cli": "2.1.1",
     "@graphql-codegen/typescript": "2.1.1",
     "@graphql-codegen/typescript-operations": "2.1.1",
     "@graphql-codegen/typescript-react-apollo": "3.1.1",
+    "@next/eslint-plugin-next": "^11.1.0",
     "@paljs/cli": "^3.8.2",
     "@types/bcryptjs": "2.4.2",
     "@types/cookie": "0.4.1",
