--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../../base
+  - ../../base
 images:
-- name: "spantree/hello-world-kustomize-k8s"
-  newName: "spantree/hello-world-kustomize-k8s"
-  newTag: "2.0"
+  - name: 'spantree/hello-world-kustomize-k8s'
+    newName: 'spantree/hello-world-kustomize-k8s'
+    newTag: '2.0'
 namespace: hello-world
 namePrefix: dev-
 patchesStrategicMerge:
-- map.yaml
+  - map.yaml
