--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,9 @@ version: '3'
 services:
   app:
     build: .
+    environment:
+      DATABASE_TYPE: SQLite
     ports:
       - '3000:3000'
+    volumes:
+      - '.'
