--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql": "15.5.1",
     "graphql-tag": "2.12.5",
     "jsonwebtoken": "8.5.1",
+    "lodash": "^4.17.21",
     "micro": "9.3.4",
     "next": "11.1.0",
     "nexus": "1.1.0",
@@ -47,6 +48,7 @@
     "@types/cookie": "0.4.1",
     "@types/graphql": "14.5.0",
     "@types/jsonwebtoken": "8.5.5",
+    "@types/lodash": "^4.14.172",
     "@types/node": "16.7.1",
     "@types/react": "17.0.19",
     "@types/react-dom": "17.0.9",
