--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-world-kustomize-k8s",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "author": "Spantree <hello@spantree.net>",
   "license": "MIT",
   "scripts": {
@@ -22,6 +22,7 @@
     "@heroicons/react": "1.0.4",
     "@paljs/nexus": "3.8.2",
     "@prisma/client": "2.29.1",
+    "@tailwindcss/forms": "^0.3.3",
     "apollo-server-micro": "3.1.2",
     "bcryptjs": "2.4.3",
     "cookie": "0.4.1",
