--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Spantree <hello@spantree.net>",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "dotenv -f .env.development -- next",
     "build": "next build",
     "start": "next start",
     "generate": "pal g && yarn generate:prisma && yarn generate:nexus && yarn codegen",
@@ -26,6 +26,7 @@
     "apollo-server-micro": "3.1.2",
     "bcryptjs": "2.4.3",
     "cookie": "0.4.1",
+    "dotenv-expand": "^5.1.0",
     "graphql": "15.5.1",
     "graphql-tag": "2.12.5",
     "jsonwebtoken": "8.5.1",
@@ -57,6 +58,7 @@
     "@typescript-eslint/parser": "4.29.3",
     "autoprefixer": "10.3.2",
     "babel-plugin-graphql-tag": "3.3.0",
+    "dotenv-cli": "^4.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "8.3.0",
