fixing vestigial/invalid docker volume directive

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     build: .
     environment:
       DATABASE_TYPE: SQLite
+      GREETING: 'Hello from Docker Compose!'
     ports:
       - '3000:3000'
-    volumes:
-      - '.'
