--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: hello-world-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       deployment: hello-world
@@ -23,3 +23,8 @@ spec:
                 configMapKeyRef:
                   name: hello-world-config
                   key: greeting
+            - name: DATABASE_TYPE
+              valueFrom:
+                configMapKeyRef:
+                  name: hello-world-config
+                  key: dbtype
