Adding port forwarding configuration to skaffold.  Adding environment variables so that we know if kustomize overlay is used.  Docker build now regenerates all the things.

--- a/k8s/base/configMap.yaml
+++ b/k8s/base/configMap.yaml
@@ -3,6 +3,5 @@ kind: ConfigMap
 metadata:
   name: hello-world-config
 data:
-  greeting: 'Good Morning!'
+  greeting: 'Hello from k8s base environment!'
   dbtype: 'SQLite'
-  
