--- a/skaffold.yml
+++ b/skaffold.yml
@@ -12,4 +12,11 @@ build:
 deploy:
   kustomize:
     paths:
+      - ./k8s/base
       - ./k8s/overlays/dev
+portForward:
+  - resourceType: deployment
+    resourceName: dev-hello-world-deployment
+    namespace: hello-world
+    port: 3000
+    localPort: 3002
