No longer exposing app externally

--- a/k8s/base/service.yaml
+++ b/k8s/base/service.yaml
@@ -2,15 +2,12 @@ kind: Service
 apiVersion: v1
 metadata:
   name: hello-world-service
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: external
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
-    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 spec:
   selector:
     deployment: hello-world
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 3000
